# sovereign-dp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  kind-config.yaml
.beads/: issues.jsonl
dagster/: Dockerfile  pyproject.toml
dagster/sovereign_dp_dagster/: __init__.py
k8s/helm-values/: dagster-values.yaml  jupyterhub-values.yaml  nessie-values.yaml  postgresql-dagster-values.yaml  trino-values.yaml
k8s/manifests/: namespace.yaml  nessie-deployment.yaml  rustfs-deployment.yaml
notebooks/: trino-iceberg-demo.ipynb
notebooks/docker/: Dockerfile
scripts/: README.md  build-notebook-image.sh  deploy-all.sh  install-helm.sh  setup-cluster.sh  setup-credentials.sh  setup-dagster.sh  setup-jupyterhub.sh  setup-namespace.sh  setup-nessie.sh  setup-rustfs.sh  setup-trino.sh  teardown-cluster.sh
