[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-dp-dagster"
version = "0.1.0"
description = "Dagster pipelines for sovereign-dp lakehouse"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.6.0",
    "dagster-aws>=0.22.0",
    "trino>=0.327.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.dagster]
module_name = "sovereign_dp_dagster"
